Registro de usuarios segun data del Facebook

--- a/MyApp/www/index.html
+++ b/MyApp/www/index.html
@@ -17,26 +17,10 @@
       <button id="BtRegister">Register</button>
       <button id="Login">login</button>
       <button id="GetInfo">GetInfo</button>
-      <p>Name: <span id="userName"></span></p>
+      <button id="Logout">Logout</button>
+      <p style="color: #fff">Name: <span style="color: #fff" id="userName"></span></p>
       <img id="userPic"/>
       <hr/>
-      <!-- <div id="fb-root"></div> -->
-      <!-- <fb:login-button class="fb-login-button" scope="public_profile,email" onlogin="checkLoginState();">
-      </fb:login-button> -->
-  <!--
-      <Script>
-        window.fbAsyncInit = function () {
-            if (!window.cordova) {
-              // Inicializar - sólo se ejecuta cuando se prueba en el navegador.
-              //facebookConnectPlugin.browserInit(308939305080);
-            }
-        }
-      </Script> -->
-      <!-- <script>
-        window.opener.openFB.oauthCallback(window.location.href);
-        window.close();
-      </script> -->
-      <!-- Modal -->
       <div class="modal fade" id="playModal" tabindex="-1" role="dialog" aria-labelledby="playModalLabel">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
@@ -267,13 +251,12 @@
           <!-- <script src="js/Memory.js"></script> -->
           <script src='js/jquery.playSound.js'></script>
           <script src='js/visibility.js'></script>
-          <!-- <script src='js/ajax.js'></script> -->
           <script src="cordova.js"></script>
           <script src='js/openfb.js'></script>
           <script src='js/FbControllers.js'></script>
+          <!-- <script src='js/FbControllersBrowser.js'></script> -->
           <!-- <script src='js/loginFb.js'></script> -->
           <script src='js/controllers.js'></script>
-          <!-- <script src='js/facebookConnectPlugin.js'></script> -->
           <!-- // <script src='js/SocialSharing.js'></script> -->
           <!-- // <script src="sounds/sound.js"></script> -->
         </footer>
