--- a/MyApp/www/index.html
+++ b/MyApp/www/index.html
@@ -21,6 +21,23 @@
       <p style="color: #fff">Name: <span style="color: #fff" id="userName"></span></p>
       <img id="userPic"/>
       <hr/>
+      <!-- <div id="fb-root"></div> -->
+      <!-- <fb:login-button class="fb-login-button" scope="public_profile,email" onlogin="checkLoginState();">
+      </fb:login-button> -->
+  <!--
+      <Script>
+        window.fbAsyncInit = function () {
+            if (!window.cordova) {
+              // Inicializar - sólo se ejecuta cuando se prueba en el navegador.
+              //facebookConnectPlugin.browserInit(308939305080);
+            }
+        }
+      </Script> -->
+      <!-- <script>
+        window.opener.openFB.oauthCallback(window.location.href);
+        window.close();
+      </script> -->
+      <!-- Modal -->
       <div class="modal fade" id="playModal" tabindex="-1" role="dialog" aria-labelledby="playModalLabel">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
