Aumenta el Score segun el tiempo en el juego DRAG-IPV4

--- a/MyApp/www/juegos/Drag/index.html
+++ b/MyApp/www/juegos/Drag/index.html
@@ -4,20 +4,20 @@
     	<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     	<title>DRAG</title>
-        
+
         <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="../../css/bootstrap-theme.min.css">    
+        <link rel="stylesheet" type="text/css" href="../../css/bootstrap-theme.min.css">
         <link rel="stylesheet" type="text/css" href="../../css/styles.css">
         <link rel="stylesheet" type="text/css" href="../../css/media.css">
-        
-        <link rel="icon" href="favicon.ico" type="../../img/fv-icon.png"/> 
+
+        <link rel="icon" href="favicon.ico" type="../../img/fv-icon.png"/>
         <script src='../../js/jquery.js'></script>
         <script src='../../js/jquery.min.js'></script>
-        <script src="../../js/bootstrap.min.js"></script> 
+        <script src="../../js/bootstrap.min.js"></script>
         <script src='../../js/jquery-ui.min.js'></script>
         <script src='../../js/jquery.ui.touch-punch.min.js'></script>
         <script src='../../js/drag.js'></script>
-    <script src='../../js/loginFb.js'></script>
+        <!-- <script src='../../js/FbControllers.js'></script> -->
         <script src='../../js/visibility.js'></script>
 
     </head>
@@ -40,7 +40,7 @@
                             </a>
                             <hr>
                             <a href="ipv6.html">
-                                <button id="ipv6" class="btn btn-default">IPV6</button>  
+                                <button id="ipv6" class="btn btn-default">IPV6</button>
                             </a>
                             <hr>
                             <a href="tcp.html">
@@ -52,11 +52,11 @@
                             </a>
                             <hr>
                             <a href="dns.html">
-                               <button id="dns" class="btn btn-default">DNS</button> 
+                               <button id="dns" class="btn btn-default">DNS</button>
                             </a>
                             <hr>
                         </div>
-                      </div>  
+                      </div>
                     </div>
                     <div class="modal-footer">
                       <a href="#" onclick="history.back()">
