--- a/MyApp/www/juegos/Drag/ipv4.html
+++ b/MyApp/www/juegos/Drag/ipv4.html
@@ -8,17 +8,17 @@
     <meta name="author" content="">
     <title>Ipv4</title>
     <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../../css/bootstrap-theme.min.css">    
+    <link rel="stylesheet" type="text/css" href="../../css/bootstrap-theme.min.css">
     <link rel="stylesheet" type="text/css" href="../../css/styles.css">
     <link rel="stylesheet" type="text/css" href="../../css/media.css">
 
     <script src='../../js/jquery.js'></script>
     <script src='../../js/jquery.min.js'></script>
-    <script src="../../js/bootstrap.min.js"></script> 
+    <script src="../../js/bootstrap.min.js"></script>
     <script src='../../js/jquery-ui.min.js'></script>
     <script src='../../js/jquery.ui.touch-punch.min.js'></script>
     <script src='../../js/drag.js'></script>
-    <script src='../../js/loginFb.js'></script>
+    <!-- <script src='../../js/FbControllers.js'></script> -->
     <script src='../../js/dragIpv4.js'></script>
     <script src='../../js/visibility.js'></script>
   </head>
@@ -35,7 +35,7 @@
               <div class="game-info">
              <!--  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore culpa, consequatur ab reprehenderit reiciendis laudantium atque. Provident blanditiis voluptatem, corporis! Esse laboriosam voluptatem neque. Praesentium rem illum, molestias voluptatibus facilis.</p> -->
                 <div class="level-difficulty">
-                    <h4>Choose a Topic!</h4>                    
+                    <h4>Choose a Topic!</h4>
                     <button id="level1" type="submit" class="btn btn-default">Easy</button>
                     <p>There will be nine(9) and ten(10) already full boxes</p>
                     <hr>
@@ -45,7 +45,7 @@
                     <button id="level3" type="submit" class="btn btn-default">Hard</button>
                     <p>There will not be any full box</p>
                 </div>
-              </div>  
+              </div>
             </div>
             <div class="modal-footer">
               <a href="#" onclick="history.back()">
@@ -103,30 +103,30 @@
             </div>
         <div class="head">
             <div class="score">
-                Score: 
+                Score:
                 <div id="score">0</div>
             </div>
             <div class="time" >
-                Time: 
+                Time:
                 <div id="contratiempo">00</div>
             </div>
         </div>
         <div id="boxIpv4" class="text-center">
 
-          <input id="ipv4-0" class="col-xs-1 col-sm-1 col-md-1 col-lg-1 input" disabled="disabled"> 
-          <input id="ipv4-1" class="col-xs-1 col-sm-1 col-md-1 col-lg-1 input" disabled="disabled"> 
-          <input id="ipv4-2" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 input" disabled="disabled"> 
-          <input id="ipv4-3" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 input" disabled="disabled"> 
+          <input id="ipv4-0" class="col-xs-1 col-sm-1 col-md-1 col-lg-1 input" disabled="disabled">
+          <input id="ipv4-1" class="col-xs-1 col-sm-1 col-md-1 col-lg-1 input" disabled="disabled">
+          <input id="ipv4-2" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 input" disabled="disabled">
+          <input id="ipv4-3" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 input" disabled="disabled">
           <input id="ipv4-4" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 input" disabled="disabled">
-          <input id="ipv4-5" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 input" disabled="disabled"> 
-          <input id="ipv4-6" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 input" disabled="disabled"> 
-          <input id="ipv4-7" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 input" disabled="disabled"> 
-          <input id="ipv4-8" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 input" disabled="disabled"> 
-          <input id="ipv4-9" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 input" disabled="disabled"> 
-          <input id="ipv4-10" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 input" disabled="disabled"> 
-          <input id="ipv4-11" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 input" disabled="disabled"> 
-          <input id="ipv4-12"  class="col-xs-8 col-sm-8 col-md-8 col-lg-8 input" disabled="disabled"> 
-          <input id="ipv4-13"  class="col-xs-4 col-sm-4 col-md-4 col-lg-4 input" disabled="disabled"> 
+          <input id="ipv4-5" class="col-xs-2 col-sm-2 col-md-2 col-lg-2 input" disabled="disabled">
+          <input id="ipv4-6" class="col-xs-4 col-sm-4 col-md-4 col-lg-4 input" disabled="disabled">
+          <input id="ipv4-7" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 input" disabled="disabled">
+          <input id="ipv4-8" class="col-xs-3 col-sm-3 col-md-3 col-lg-3 input" disabled="disabled">
+          <input id="ipv4-9" class="col-xs-6 col-sm-6 col-md-6 col-lg-6 input" disabled="disabled">
+          <input id="ipv4-10" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 input" disabled="disabled">
+          <input id="ipv4-11" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 input" disabled="disabled">
+          <input id="ipv4-12"  class="col-xs-8 col-sm-8 col-md-8 col-lg-8 input" disabled="disabled">
+          <input id="ipv4-13"  class="col-xs-4 col-sm-4 col-md-4 col-lg-4 input" disabled="disabled">
         </div>
 
         <div id="pregunta">
