--- a/MyApp/www/juegos/Drag/udp.html
+++ b/MyApp/www/juegos/Drag/udp.html
@@ -20,7 +20,9 @@
     <script src='../../js/jquery-ui.min.js'></script>
     <script src='../../js/jquery.ui.touch-punch.min.js'></script>
     <script src='../../js/drag.js'></script>
-    <script src='../../js/loginFb.js'></script>
+    <script src='../../js/openfb.js'></script>
+    <script src='../../js/FbControllers.js'></script>
+    <script src='../../js/controllers.js'></script>
     <script src='../../js/dragUdp.js'></script>
     <script src='../../js/visibility.js'></script> 
   </head>
