--- a/MyApp/www/juegos/Drag/index-por.html
+++ b/MyApp/www/juegos/Drag/index-por.html
@@ -17,7 +17,9 @@
         <script src='../../js/jquery-ui.min.js'></script>
         <script src='../../js/jquery.ui.touch-punch.min.js'></script>
         <script src='../../js/drag.js'></script>
-    <script src='../../js/loginFb.js'></script>
+            <script src='../../js/openfb.js'></script>
+        <script src='../../js/FbControllers.js'></script>
+        <script src='../../js/controllers.js'></script>
         <script src='../../js/visibility.js'></script>
 
     </head>
