--- a/MyApp/www/juegos/Drag/ipv4.html
+++ b/MyApp/www/juegos/Drag/ipv4.html
@@ -18,7 +18,9 @@
     <script src='../../js/jquery-ui.min.js'></script>
     <script src='../../js/jquery.ui.touch-punch.min.js'></script>
     <script src='../../js/drag.js'></script>
-    <!-- <script src='../../js/FbControllers.js'></script> -->
+    <script src='../../js/openfb.js'></script>
+    <script src='../../js/FbControllers.js'></script>
+    <script src='../../js/controllers.js'></script>
     <script src='../../js/dragIpv4.js'></script>
     <script src='../../js/visibility.js'></script>
   </head>
