--- a/MyApp/www/juegos/Drag/tcp-es.html
+++ b/MyApp/www/juegos/Drag/tcp-es.html
@@ -21,7 +21,9 @@
     <script src='../../js/jquery-ui.min.js'></script>
     <script src='../../js/jquery.ui.touch-punch.min.js'></script>
     <script src='../../js/drag.js'></script>
-    <script src='../../js/loginFb.js'></script>
+            <script src='../../js/openfb.js'></script>
+        <script src='../../js/FbControllers.js'></script>
+        <script src='../../js/controllers.js'></script>
     <!-- <script src='../../js/testing.js'></script> -->
     <script src='../../js/dragTcp.js'></script>
     <script src='../../js/visibility.js'></script>
