--- a/MyApp/www/juegos/Drag/tcp.html
+++ b/MyApp/www/juegos/Drag/tcp.html
@@ -20,8 +20,10 @@
     <script src="../../js/bootstrap.min.js"></script> 
     <script src='../../js/jquery-ui.min.js'></script>
     <script src='../../js/jquery.ui.touch-punch.min.js'></script>
-        <script src='../../js/drag.js'></script>
-    <script src='../../js/loginFb.js'></script>
+    <script src='../../js/drag.js'></script>
+    <script src='../../js/openfb.js'></script>
+    <script src='../../js/FbControllers.js'></script>
+    <script src='../../js/controllers.js'></script>
     <!-- <script src='../../js/testing.js'></script> -->
     <script src='../../js/dragTcp.js'></script>
     <script src='../../js/visibility.js'></script>
