--- a/MyApp/www/juegos/Memoria/index-es.html
+++ b/MyApp/www/juegos/Memoria/index-es.html
@@ -20,7 +20,9 @@
     <script src='../../js/jquery-ui.min.js'></script>
     <script src='../../js/jquery.ui.touch-punch.min.js'></script>
     <script src='../../js/Memory.js'></script>
-    <script src='../../js/loginFb.js'></script>
+            <script src='../../js/openfb.js'></script>
+        <script src='../../js/FbControllers.js'></script>
+        <script src='../../js/controllers.js'></script>
     <!-- // <script src='../../js/SocialSharing.js'></script> -->
     <script src='../../js/visibility.js'></script>
 
