--- a/MyApp/www/juegos/crucigrama/InternetGovernance.html
+++ b/MyApp/www/juegos/crucigrama/InternetGovernance.html
@@ -15,7 +15,9 @@
 <script src="../../js/bootstrap.min.js"></script> 
 <script src='../../js/jquery-ui.min.js'></script>
     <script src="../../js/governance.js"></script>
-    <script src='../../js/loginFb.js'></script>
+            <script src='../../js/openfb.js'></script>
+        <script src='../../js/FbControllers.js'></script>
+        <script src='../../js/controllers.js'></script>
 </head>
 
 <body>
