--- a/MyApp/www/juegos/crucigrama/index.html
+++ b/MyApp/www/juegos/crucigrama/index.html
@@ -18,7 +18,9 @@
         <script src='../../js/jquery.ui.touch-punch.min.js'></script>
         <script src='../../js/visibility.js'></script>
             <script src='../../js/crucigrama.js'></script>
-    <script src='../../js/loginFb.js'></script>
+            <script src='../../js/openfb.js'></script>
+        <script src='../../js/FbControllers.js'></script>
+        <script src='../../js/controllers.js'></script>
 
     </head>
     <body>
