--- a/MyApp/www/juegos/discos/index-es.html
+++ b/MyApp/www/juegos/discos/index-es.html
@@ -19,7 +19,9 @@
 <script src="../../js/bootstrap.min.js"></script>
 <script src='../../js/jquery.playSound.js'></script>
     <script src='../../js/disc.js'></script>
-    <script src='../../js/loginFb.js'></script>
+            <script src='../../js/openfb.js'></script>
+        <script src='../../js/FbControllers.js'></script>
+        <script src='../../js/controllers.js'></script>
 
 <!-- ----------- /SCRIPTS JS ---------------->
 
