--- a/MyApp/www/juegos/discos/ipv6.html
+++ b/MyApp/www/juegos/discos/ipv6.html
@@ -20,7 +20,9 @@
 <script src="../../js/bootstrap.min.js"></script>
 <!--<script src='../../js/jquery.playSound.js'></script>-->
     <script src='../../js/discIpv6.js'></script>
-    <script src='../../js/loginFb.js'></script>
+            <script src='../../js/openfb.js'></script>
+        <script src='../../js/FbControllers.js'></script>
+        <script src='../../js/controllers.js'></script>
 
 <!-- ----------- /SCRIPTS JS ---------------->
 
