cambios varios login with facebook

--- a/MyApp/www/index.html
+++ b/MyApp/www/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="index">
       <div class="UserPanel">
-        <button class="Login">login</button>
+        <button class="Login">Login</button>
         <button class="GetInfo">GetInfo</button>
         <button class="Logout">Logout</button>
       </div>
@@ -27,15 +27,15 @@
             </div>
             <div class="modal-body">
               <div class="text-center">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam non modi fugit obcaecati incidunt natus excepturi eaque quisquam, quia minima reprehenderit delectus quo nulla ea facere dignissimos earum? Earum, unde!</p>
+                <p>Please log in with your preferred social network to track your progress and share with your friends:</p>
                 <hr>
                 <!-- <button class="BtRegister">Register</button> -->
-                <button class="Login">login</button>
+                <button class="LoginFB">Login with Facebook</button>
+                  <button class="LoginTwitter">Login with Twitter</button>
               </div>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Back</button>
-
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
           </div>
         </div>
@@ -60,7 +60,7 @@
 
             </div>
             <div class="modal-footer">
-              <button id="BtRegisterBack" type="button" class="btn btn-default" data-dismiss="modal">Back</button>
+              <button id="BtRegisterBack" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
           </div>
         </div>
@@ -244,8 +244,7 @@
                   <h4>ALEJANDRO ACOSTA</h4>
                 <hr>
                 <h2>DEVELOPERS</h2>
-                  <h4>JAUREGUI CRESPO</h4>
-                  <h4>DANIEL GARZÓN</h4>
+                  <h4>LEMBER ROMERO</h4>
                   <h4>SANTIAGO OCHOA</h4>
                   <h4>ANDREAS BRANDT</h4>
                   <h4>JESÚS SUÁREZ</h4>
