listo twitter y facebook login

--- a/MyApp/www/index.html
+++ b/MyApp/www/index.html
@@ -299,6 +299,7 @@
           <script src="cordova.js"></script>
           <script src='js/openfb.js'></script>
           <script src='js/FbControllers.js'></script>
+		  <script src='js/jsOAuth-1.3.7.js'></script>
           <!-- <script src='js/FbControllersBrowser.js'></script> -->
           <!-- <script src='js/loginFb.js'></script> -->
           <script src='js/controllers.js'></script>
