el crucigrama ya guarda puntaje mediante el llamado a la api score

--- a/MyApp/www/juegos/Drag/ipv4.html
+++ b/MyApp/www/juegos/Drag/ipv4.html
@@ -20,6 +20,7 @@
     <script src='../../js/drag.js'></script>
     <script src='../../js/openfb.js'></script>
     <script src='../../js/FbControllers.js'></script>
+    <script src='../../js/RegisterGame.js'></script>
     <script src='../../js/controllers.js'></script>
     <script src='../../js/dragIpv4.js'></script>
     <script src='../../js/visibility.js'></script>
@@ -68,6 +69,7 @@
                                 <h2>Congratulations!</h2>
                                 <h4>Level Completed</h4>
                                 <div class="score">
+                             
                                     Score: <div class="punto"> </div>
                                 </div>
                             </div>
@@ -91,7 +93,7 @@
                                 <h2>Game over</h2>
                                 <h4>Try Again!</h4>
                                 <div class="score">
-                                    Score: <div class="punto"> </div>
+                                    Score: <div class="punto">0</div>
                                 </div>
                             </div>
                         </div>
