--- a/MyApp/www/juegos/Memoria/index.html
+++ b/MyApp/www/juegos/Memoria/index.html
@@ -21,6 +21,7 @@
     <script src='../../js/jquery.ui.touch-punch.min.js'></script>
     <script src='../../js/Memory.js'></script>
     <script src='../../js/openfb.js'></script>
+    <script src='../../js/RegisterGame.js'></script>
     <script src='../../js/FbControllers.js'></script>
     <script src='../../js/controllers.js'></script>
     <div id="fb-root"></div>
