--- a/MyApp/www/juegos/Drag/ipv6.html
+++ b/MyApp/www/juegos/Drag/ipv6.html
@@ -21,10 +21,11 @@
     <script src='../../js/jquery-ui.min.js'></script>
     <script src='../../js/jquery.ui.touch-punch.min.js'></script>
     <script src='../../js/drag.js'></script>
-            <script src='../../js/openfb.js'></script>
-        <script src='../../js/FbControllers.js'></script>
-        <script src='../../js/controllers.js'></script>
+    <script src='../../js/openfb.js'></script>
+    <script src='../../js/FbControllers.js'></script>
+    <script src='../../js/controllers.js'></script>
     <script src='../../js/dragIpv6.js'></script>
+    <script src='../../js/RegisterGame.js'></script>
     <script src='../../js/visibility.js'></script>
   </head>
   <body>
