--- a/MyApp/www/juegos/Memoria/index-por.html
+++ b/MyApp/www/juegos/Memoria/index-por.html
@@ -19,10 +19,11 @@
     <script src="../../js/bootstrap.min.js"></script> 
     <script src='../../js/jquery-ui.min.js'></script>
     <script src='../../js/jquery.ui.touch-punch.min.js'></script>
+    <script src='../../js/RegisterGame.js'></script>
     <script src='../../js/Memory.js'></script>
-            <script src='../../js/openfb.js'></script>
-        <script src='../../js/FbControllers.js'></script>
-        <script src='../../js/controllers.js'></script>
+    <script src='../../js/openfb.js'></script>
+    <script src='../../js/FbControllers.js'></script>
+    <script src='../../js/controllers.js'></script>
     <!-- // <script src='../../js/SocialSharing.js'></script> -->
     <script src='../../js/visibility.js'></script>
 
