agregar sdk de facebook para publicar por facebook

--- a/MyApp/www/juegos/Drag/index-por.html
+++ b/MyApp/www/juegos/Drag/index-por.html
@@ -17,7 +17,7 @@
         <script src='../../js/jquery-ui.min.js'></script>
         <script src='../../js/jquery.ui.touch-punch.min.js'></script>
         <script src='../../js/drag.js'></script>
-            <script src='../../js/openfb.js'></script>
+        <script src='../../js/openfb.js'></script>
         <script src='../../js/FbControllers.js'></script>
         <script src='../../js/controllers.js'></script>
         <script src='../../js/visibility.js'></script>
@@ -38,11 +38,11 @@
                         <div class="level-difficulty">
                             <h4>Escolha um tópico</h4>
                             <a href="ipv4-por.html">
-                                <button id="ipv4" class="btn btn-default">IPV4</button>
+                                <button id="ipv4" class="btn btn-default">IPv4</button>
                             </a>
                             <hr>
                             <a href="ipv6-por.html">
-                                <button id="ipv6" class="btn btn-default">IPV6</button>  
+                                <button id="ipv6" class="btn btn-default">IPv6</button>  
                             </a>
                             <hr>
                             <a href="tcp-por.html">
