--- a/MyApp/www/juegos/Drag/index.html
+++ b/MyApp/www/juegos/Drag/index.html
@@ -38,11 +38,11 @@
                         <div class="level-difficulty">
                             <h4>Choose a Topic!</h4>
                             <a href="ipv4.html">
-                                <button id="ipv4" class="btn btn-default">IPV4</button>
+                                <button id="ipv4" class="btn btn-default">IPv4</button>
                             </a>
                             <hr>
                             <a href="ipv6.html">
-                                <button id="ipv6" class="btn btn-default">IPV6</button>
+                                <button id="ipv6" class="btn btn-default">IPv6</button>
                             </a>
                             <hr>
                             <a href="tcp.html">
