--- a/MyApp/www/juegos/crucigrama/index-por.html
+++ b/MyApp/www/juegos/crucigrama/index-por.html
@@ -38,18 +38,18 @@
                         <div class="level-difficulty">
                             <h4>Escolha um tema!</h4>
                             <a href="crosswordip4-por.html">
-                                <button id="ipv4" class="btn btn-default">IPV 4</button>
+                                <button id="ipv4" class="btn btn-default">IPv4</button>
                             </a>
                             <br>
                           <!--   <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto est ratione quaerat quae earum totam, atque dolores blanditiis neque labore, placeat eum fuga illo laudantium!</span> -->
                             <hr>
                             <a href="crosswordip6-por.html">
-                                <button id="ipv4" class="btn btn-default">IPV 6</button>  
+                                <button id="ipv4" class="btn btn-default">IPv6</button>  
                             </a>
                             <br>
                             <!-- <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto est ratione quaerat quae earum totam, atque dolores blanditiis neque labore, placeat eum fuga illo laudantium!</span> -->
                             <hr>
-                            <a href="InternetGovernance-por.html">
+                            <a href="InternetGovernance.html">
                                 <button id="" class="btn btn-default">Internet Governance</button>
                             </a>                            
                             <br>
