--- a/MyApp/www/juegos/crucigrama/index.html
+++ b/MyApp/www/juegos/crucigrama/index.html
@@ -17,8 +17,8 @@
         <script src='../../js/jquery-ui.min.js'></script>
         <script src='../../js/jquery.ui.touch-punch.min.js'></script>
         <script src='../../js/visibility.js'></script>
-            <script src='../../js/crucigrama.js'></script>
-            <script src='../../js/openfb.js'></script>
+        <script src='../../js/crucigrama.js'></script>
+        <script src='../../js/openfb.js'></script>
         <script src='../../js/FbControllers.js'></script>
         <script src='../../js/controllers.js'></script>
 
@@ -38,13 +38,13 @@
                         <div class="level-difficulty">
                             <h4>Choose a Topic!</h4>
                             <a href="crosswordip4.html">
-                                <button id="ipv4" class="btn btn-default">IPV 4</button>
+                                <button id="ipv4" class="btn btn-default">IPv4</button>
                             </a>
                             <br>
                             <!-- <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto est ratione quaerat quae earum totam, atque dolores blanditiis neque labore, placeat eum fuga illo laudantium!</span> -->
                             <hr>
                             <a href="crosswordip6.html">
-                                <button id="ipv4" class="btn btn-default">IPV 6</button>  
+                                <button id="ipv4" class="btn btn-default">IPv6</button>  
                             </a>
                             <br>
                             <!-- <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto est ratione quaerat quae earum totam, atque dolores blanditiis neque labore, placeat eum fuga illo laudantium!</span> -->
@@ -55,12 +55,13 @@
                             <br>
                             <!-- <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto est ratione quaerat quae earum totam, atque dolores blanditiis neque labore, placeat eum fuga illo laudantium!</span> -->
                             <hr>
+
                         </div>
                       </div>  
                     </div>
                     <div class="modal-footer">
                       <a href="../../index.html" >
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Atrás</button>
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Back</button>
                         </a>
                     </div>
                   </div>
