--- a/MyApp/www/juegos/discos/index-es.html
+++ b/MyApp/www/juegos/discos/index-es.html
@@ -41,11 +41,11 @@
                   <div class="level-difficulty">
                       <h4>¡Elija un Tema!</h4>
                       <a href="ipv4-es.html">
-                          <button id="ipv4" class="btn btn-default">IPV4</button>
+                          <button id="ipv4" class="btn btn-default">IPv4</button>
                       </a>
                       <hr>
                       <a href="ipv6-es.html">
-                          <button id="ipv6" class="btn btn-default">IPV6</button>  
+                          <button id="ipv6" class="btn btn-default">IPv6</button>  
                       </a>
                       <hr>
                   </div>
