--- a/MyApp/www/index.html
+++ b/MyApp/www/index.html
@@ -102,7 +102,7 @@
                         <div class="col-text">
                           <h5>THIS IS BASED ON A TRADITIONAL MEMORY GAME</h5>
                           <p>
-                            You have to turn a card over and then find its pair. This pair corresponds to: Door <---->Protocol Name
+                            You have to turn a card over and then find its pair. This pair corresponds to: port <---->Protocol Name
                           </p>
                         </div>
                       </li>
@@ -125,9 +125,8 @@
                           <img class="img-responsive" src="img/drag_img.png">
                         </div>
                         <div class="col-text">
-                          <!--<h5>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISICING ELIT</h5>-->
                           <p>
-                            You have to make the corresponding datagram by dragging the name of the field to its corresponding place.
+                            You have to build the corresponding datagram by dragging the name of the field to its corresponding place.
                           </p>
                         </div>
                       </li>
@@ -149,7 +148,6 @@
                           <img class="img-responsive" src="img/crucigrama_img.PNG">
                         </div>
                         <div class="col-text">
-                         <!-- <h5>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISICING ELIT</h5> -->
                           <p>
                             You can test your skills in different aspects of the internet world with this fun crossword puzzle.
                           </p>
@@ -175,7 +173,7 @@
                         <div class="col-text">
                           <!-- <h5>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISICING ELIT</h5> -->
                           <p>
-                            The aim of this game is to select the corresponding disc according to the instructions given on the screen.  Another way to test your skills.
+                            The aim of this game is to select the corresponding disc according to the instructions given on the screen. Another way to test your skills.
                           </p>
                         </div>
                       </li>
@@ -201,7 +199,7 @@
                          <!-- <h5>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISICING ELIT</h5> -->
                           <p>
                             
-                            The goal is to answer questions regarding the output of various commands one more way to test your knowledge .
+                            The goal is to answer questions regarding the output of various commands. One more way to test your knowledge.
                           </p>
                         </div>
                       </li>
