--- a/MyApp/www/juegos/trivia/index.html
+++ b/MyApp/www/juegos/trivia/index.html
@@ -2,35 +2,25 @@
 <html>
 <head>
 	<title>A.N.G.E.L</title>
-
 	<meta charset="utf-8">
-
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
 	<link rel="stylesheet" type="shortcut icon" href="../../img/fv-icon.png" type="image/x-icon">
-
+	<link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../../css/bootstrap-theme.min.css">    
+	<link rel="stylesheet" type="text/css" href="../../css/styles.css">
+	<link rel="stylesheet" type="text/css" href="../../css/media.css">
 	<link rel="stylesheet" type="text/css" href="css/Trivia.css">
-
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 
 	<script src='../../js/jquery.min.js'></script>
-
 	<script src="js/Trivia.js"></script>
-
 	<script src="js/modernizr.js"></script>
-
 	<script src='js/prefixfree.min.js'></script>
-
 	<script src='../../js/openfb.js'></script>
-
 	<script src='../../js/jsOAuth-1.3.7.js'></script>
-
 	<script src='../../js/RegisterGame.js'></script>
-
     <script src='../../js/FbControllers.js'></script>
-
     <script src='../../js/controllers.js'></script>
-
     <script src="../../cordova.js"></script>
 
 </head>
