--- a/MyApp/www/juegos/Memoria/index.html
+++ b/MyApp/www/juegos/Memoria/index.html
@@ -65,6 +65,27 @@
                                     <button id="level3" type="submit" class="btn btn-default">Hard</button>
                                     <p>Twenty-four(24) cards to choose.</p>
                                     <hr>
+									<p>Time: &nbsp;&nbsp;&nbsp;<select id="cmbTime" class="btn">
+										<option value=''></option>
+										<option value='10'>10</option>
+										<option value='20'>20</option>
+										<option value='30'>30</option>
+										<option value='40'>40</option>
+										<option value='50'>50</option>
+										<option value='60'>60</option>
+										<option value='70'>70</option>
+										<option value='80'>80</option>
+										<option value='90'>90</option>
+										<option value='100'>100</option>
+										<option value='110'>140</option>
+										<option value='120'>120</option>
+										<option value='130'>130</option>
+										<option value='140'>140</option>
+										<option value='150'>150</option>
+										<option value='160'>160</option>
+									</select>
+									</p>
+                                    <hr>
                                 </div>
                             </div>
                         </div>
