--- a/MyApp/www/juegos/trivia/index-es.html
+++ b/MyApp/www/juegos/trivia/index-es.html
@@ -8,7 +8,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<link rel="stylesheet" type="shortcut icon" href="" type="image/x-icon">
-
+	<link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../../css/bootstrap-theme.min.css">
+    
 	<link rel="stylesheet" type="text/css" href="css/Trivia.css">
 
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
