--- a/MyApp/www/juegos/crucigrama/index.html
+++ b/MyApp/www/juegos/crucigrama/index.html
@@ -55,6 +55,24 @@
                             <br>
                             <!-- <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto est ratione quaerat quae earum totam, atque dolores blanditiis neque labore, placeat eum fuga illo laudantium!</span> -->
                             <hr>
+							<p>Time: &nbsp;&nbsp;&nbsp;<select id="cmbTime" class="btn">
+								<option value=''></option>
+								<option value='100'>100</option>
+								<option value='150'>150</option>
+								<option value='200'>200</option>
+								<option value='250'>250</option>
+								<option value='300'>300</option>
+								<option value='400'>400</option>
+								<option value='450'>450</option>
+								<option value='500'>500</option>
+								<option value='550'>550</option>
+								<option value='600'>600</option>
+								<option value='650'>650</option>
+								<option value='700'>700</option>
+								<option value='750'>750</option>
+								<option value='800'>800</option>
+							</select>
+							</p> <hr>
 
                         </div>
                       </div>  
