--- a/MyApp/www/juegos/discos/ipv4-es.html
+++ b/MyApp/www/juegos/discos/ipv4-es.html
@@ -58,7 +58,29 @@
                                     <hr>
                                     <button id="level2" type="submit" class="btn btn-default">Difícil</button>
                                     <!--<p>Sixteen(16) cards to choose.</p>-->
-                                    <hr>
+                                    <hr>									
+									<p>Tiempo: &nbsp;&nbsp;&nbsp;<select id="cmbTime" class="btn">
+										<option value=''></option>
+										<option value='10'>10</option>
+										<option value='15'>15</option>
+										<option value='20'>20</option>
+										<option value='25'>25</option>
+										<option value='30'>30</option>
+										<option value='40'>40</option>
+										<option value='45'>45</option>
+										<option value='50'>50</option>
+										<option value='55'>55</option>
+										<option value='60'>60</option>
+										<option value='65'>65</option>
+										<option value='70'>70</option>
+										<option value='75'>75</option>
+										<option value='80'>80</option>
+										<option value='85'>85</option>
+										<option value='90'>90</option>
+										<option value='95'>95</option>
+										<option value='100'>100</option>
+										</select>
+									  </p> <hr>
                                 </div>
                             </div>  
                         </div>
