--- a/MyApp/www/juegos/Drag/dns-por.html
+++ b/MyApp/www/juegos/Drag/dns-por.html
@@ -53,13 +53,13 @@
                   <div class="level-difficulty">
                     <h4>Escolha um nível de dificuldade</h4>                    
                     <button id="level1" type="submit" class="btn btn-default">Fácil</button>
-                    <p>Haverá oito (8) e onze (11) caixas e completa.</p>
+                    <p>Haverá entre oito (8) e onze (11) caixas preenchidas</p>
                     <hr>
                     <button id="level2" type="submit" class="btn btn-default">Meio</button>
-                    <p>Haverá cinco (5) e sete (7) e completos caixas.</p>
+                    <p>Haverá entre cinco (5) e sete (7) caixas preenchidas</p>
                     <hr>
                     <button id="level3" type="submit" class="btn btn-default">Difícil</button>
-                    <p>Não haverá caixa cheia.</p>
+                    <p>Não haverá caixa preenchidas</p>
 					<hr>
 					<p>Tempo: &nbsp;&nbsp;&nbsp;<select id="cmbTime" class="btn">
 						<option value=''></option>
