--- a/MyApp/www/juegos/Drag/dns.html
+++ b/MyApp/www/juegos/Drag/dns.html
@@ -52,13 +52,13 @@
                   <div class="level-difficulty">
                     <h4>Choose a Topic!</h4>                    
                     <button id="level1" type="submit" class="btn btn-default">Easy</button>
-                    <p>There will be between eight(8) and eleven(11) already full boxes</p>
+                    <p>There will be between eight(8) and eleven(11) already filled boxes</p>
                     <hr>
                     <button id="level2" type="submit" class="btn btn-default">Medium</button>
-                    <p>There will be between five(5) and seven(7) already full boxes</p>
+                    <p>There will be between five(5) and seven(7) already filled boxes</p>
                     <hr>
                     <button id="level3" type="submit" class="btn btn-default">Hard</button>
-                    <p>There will not be any full box</p>
+                    <p>There will be no filled boxes</p>
 					<hr>
 					<p>Time: &nbsp;&nbsp;&nbsp;<select id="cmbTime" class="btn">
 						<option value=''></option>
