--- a/MyApp/www/juegos/Drag/index.html
+++ b/MyApp/www/juegos/Drag/index.html
@@ -57,6 +57,14 @@
                                <button id="dns" class="btn btn-default">DNS</button>
                             </a>
                             <hr>
+                            <a href="ethernet.html">
+                               <button id="Ethernet" class="btn btn-default">Ethernet </button>
+                            </a>
+                            <hr>
+                            <a href="icmpv6.html">
+                               <button id="icmpv6" class="btn btn-default">icmpv6</button>
+                            </a>
+                            <hr>
                         </div>
                       </div>
                     </div>
