--- a/MyApp/www/juegos/Drag/ipv6.html
+++ b/MyApp/www/juegos/Drag/ipv6.html
@@ -53,13 +53,13 @@
                 <div class="level-difficulty">
                     <h4>Choose a Topic!</h4>                    
                     <button id="level1" type="submit" class="btn btn-default">Easy</button>
-                    <p>There will be five(5) or six(6) already full boxes</p>
+                    <p>There will be between five(5) and six(6) already filled boxes</p>
                     <hr>
                     <button id="level2" type="submit" class="btn btn-default">Medium</button>
-                    <p>There will be three(3) or four(4) already full boxes</p>
+                    <p>There will be between three(3) and four(4) already filled boxes</p>
                     <hr>
                     <button id="level3" type="submit" class="btn btn-default">Hard</button>
-                    <p>There will not be any full box</p>
+                    <p>There will be no filled boxes</p>
 					<hr>
 					<p>Time: &nbsp;&nbsp;&nbsp;<select id="cmbTime" class="btn">
 						<option value=''></option>
