--- a/MyApp/www/juegos/Drag/udp-por.html
+++ b/MyApp/www/juegos/Drag/udp-por.html
@@ -51,13 +51,13 @@
                 <div class="level-difficulty">
                     <h4>Escolha um nível de dificuldade</h4>                    
                     <button id="level1" type="submit" class="btn btn-default">Fácil</button>
-                    <p>Haverá três ( 3 ) e quatro (4) caixas cheias</p>
+                    <p>Haverá entre três ( 3 ) e quatro (4) caixas cheias</p>
                     <hr>
                     <button id="level2" type="submit" class="btn btn-default">Meio</button>
-                    <p>Haverá dois (2 ) e três (3) caixas cheias</p>
+                    <p>Haverá entre dois (2 ) e três (3) caixas cheias</p>
                     <hr>
                     <button id="level3" type="submit" class="btn btn-default">Difícil</button>
-                    <p>Não haverá caixa cheia.</p>
+                    <p>Não haverá caixa cheia</p>
 					 <hr>
 					<p>Time: &nbsp;&nbsp;&nbsp;<select id="cmbTime" class="btn">
 						<option value=''></option>
