--- a/MyApp/www/juegos/Drag/index-es.html
+++ b/MyApp/www/juegos/Drag/index-es.html
@@ -56,6 +56,14 @@
                             <a href="dns-es.html">
                                <button id="dns" class="btn btn-default">DNS</button> 
                             </a>
+                           <hr>
+                            <a href="ethernet-es.html">
+                               <button id="Ethernet" class="btn btn-default">Ethernet </button>
+                            </a>
+                            <hr>
+                            <a href="icmpv6-es.html">
+                               <button id="icmpv6" class="btn btn-default">icmpv6</button>
+                            </a>
                             <hr>
                         </div>
                       </div>  
